[package]
name = "tpm2-send-tbs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
hex = "0.4"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
windows = { version = "0.58", features = [
    "Win32_System_TpmBaseServices",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_IO",
] }
libc = "0.2.186"
